--- a/src/ML-Chess.ipynb
+++ b/src/ML-Chess.ipynb
@@ -17,14 +17,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
     "\n",
     "from data_config import DataConfig\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "NUM_CLASSES = 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.8.0'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.__version__"
    ]
   },
   {
@@ -40,22 +74,251 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conjunto de treinamento:"
+    "Conjuntos de dados:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data, train_labels = data.get_train()"
+    "train_data, train_labels = data.get_train(3)\n",
+    "test_data, test_labels = data.get_test(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_labels = test_labels[:, 0].astype(int).reshape(-1,1)\n",
+    "train_labels = train_labels[:, 0].astype(int).reshape(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0],\n",
+       "       [0],\n",
+       "       [0]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 227, 227)\n",
+      "(3, 2)\n",
+      "(3, 227, 227)\n",
+      "(3, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_data.shape)\n",
+    "print(train_labels.shape)\n",
+    "print(test_data.shape)\n",
+    "print(test_labels.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def inference(images):\n",
+    "  \"\"\"Build the CIFAR-10 model.\n",
+    "  Args:\n",
+    "    images: Images returned from distorted_inputs() or inputs().\n",
+    "  Returns:\n",
+    "    Logits.\n",
+    "  \"\"\"\n",
+    "  # We instantiate all variables using tf.get_variable() instead of\n",
+    "  # tf.Variable() in order to share variables across multiple GPU training runs.\n",
+    "  # If we only ran this model on a single GPU, we could simplify this function\n",
+    "  # by replacing all instances of tf.get_variable() with tf.Variable().\n",
+    "  #\n",
+    "  # conv1\n",
+    "  with tf.variable_scope('conv1') as scope:\n",
+    "    kernel = tf.get_variable('weights',\n",
+    "                            shape=[5, 5, 3, 64],\n",
+    "                            initializer=tf.truncated(stddev=5e-2,dtype=tf.float32),\n",
+    "                            dtype=tf.float32)\n",
+    "    conv = tf.nn.conv2d(images, kernel, [1, 1, 1, 1], padding='SAME')\n",
+    "    biases = tf.get_variable('biases', [64], tf.constant_initializer(0.0))\n",
+    "    pre_activation = tf.nn.bias_add(conv, biases)\n",
+    "    conv1 = tf.nn.relu(pre_activation, name=scope.name)\n",
+    "\n",
+    "  # pool1\n",
+    "  pool1 = tf.nn.max_pool(conv1, ksize=[1, 3, 3, 1], strides=[1, 2, 2, 1],\n",
+    "                         padding='SAME', name='pool1')\n",
+    "  # norm1\n",
+    "  norm1 = tf.nn.lrn(pool1, 4, bias=1.0, alpha=0.001 / 9.0, beta=0.75,\n",
+    "                    name='norm1')\n",
+    "\n",
+    "  # conv2\n",
+    "  with tf.variable_scope('conv2') as scope:\n",
+    "    kernel = tf.get_variable('weights',\n",
+    "                            shape=[5, 5, 64, 64],\n",
+    "                            initializer=tf.truncated(stddev=5e-2,dtype=tf.float32),\n",
+    "                            dtype=tf.float32)\n",
+    "    conv = tf.nn.conv2d(norm1, kernel, [1, 1, 1, 1], padding='SAME')\n",
+    "    biases = tf.get_variable('biases', [64], tf.constant_initializer(0.1),dtype=tf.float32)\n",
+    "    pre_activation = tf.nn.bias_add(conv, biases)\n",
+    "    conv2 = tf.nn.relu(pre_activation, name=scope.name)\n",
+    "\n",
+    "  # norm2\n",
+    "  norm2 = tf.nn.lrn(conv2, 4, bias=1.0, alpha=0.001 / 9.0, beta=0.75,\n",
+    "                    name='norm2')\n",
+    "  # pool2\n",
+    "  pool2 = tf.nn.max_pool(norm2, ksize=[1, 3, 3, 1],\n",
+    "                         strides=[1, 2, 2, 1], padding='SAME', name='pool2')\n",
+    "\n",
+    "  # local3\n",
+    "  with tf.variable_scope('local3') as scope:\n",
+    "    # Move everything into depth so we can perform a single matrix multiply.\n",
+    "    reshape = tf.reshape(pool2, [images.get_shape().as_list()[0], -1])\n",
+    "    dim = reshape.get_shape()[1].value\n",
+    "    weights = tf.get_variable('weights', shape=[dim, 384],\n",
+    "                                          initializer=tf.truncated(stddev=5e-2,dtype=tf.float32), dtype=tf.float32)\n",
+    "    biases = tf.get_variable('biases', [384], tf.constant_initializer(0.1))\n",
+    "    local3 = tf.nn.relu(tf.matmul(reshape, weights) + biases, name=scope.name)\n",
+    "\n",
+    "  # local4\n",
+    "  with tf.variable_scope('local4') as scope:\n",
+    "    weights = tf.get_variable('weights', shape=[384, 192],\n",
+    "                                          initializer=tf.truncated(stddev=5e-2,dtype=tf.float32),dtype=tf.float32)\n",
+    "    biases = tf.get_variable('biases', [192], tf.constant_initializer(0.1))\n",
+    "    local4 = tf.nn.relu(tf.matmul(local3, weights) + biases, name=scope.name)\n",
+    "\n",
+    "\n",
+    "  # linear layer(WX + b),\n",
+    "  # We don't apply softmax here because\n",
+    "  # tf.nn.sparse_softmax_cross_entropy_with_logits accepts the unscaled logits\n",
+    "  # and performs the softmax internally for efficiency.\n",
+    "    with tf.variable_scope('softmax_linear') as scope:\n",
+    "    weights = tf.get_variable('weights', [192, NUM_CLASSES],\n",
+    "                                          initializer=tf.truncated(stddev=1/192,dtype=tf.float32), dtype=tf.float32)\n",
+    "    biases = tf.get_variable('biases', [NUM_CLASSES],\n",
+    "                              tf.constant_initializer(0.0))\n",
+    "    softmax_linear = tf.add(tf.matmul(local4, weights), biases, name=scope.name)\n",
+    "\n",
+    "\n",
+    "    return softmax_linear\n",
+    "\n",
+    "\n",
+    "def loss(logits, labels):\n",
+    "    \"\"\"Add L2Loss to all the trainable variables.\n",
+    "    Add summary for \"Loss\" and \"Loss/avg\".\n",
+    "    Args:\n",
+    "    logits: Logits from inference().\n",
+    "    labels: Labels from distorted_inputs or inputs(). 1-D tensor\n",
+    "            of shape [batch_size]\n",
+    "    Returns:\n",
+    "    Loss tensor of type float.\n",
+    "    \"\"\"\n",
+    "    # Calculate the average cross entropy loss across the batch.\n",
+    "    labels = tf.cast(labels, tf.int64)\n",
+    "    cross_entropy = tf.nn.sparse_softmax_cross_entropy_with_logits(\n",
+    "    labels=labels, logits=logits, name='cross_entropy_per_example')\n",
+    "    cross_entropy_mean = tf.reduce_mean(cross_entropy, name='cross_entropy')\n",
+    "    tf.add_to_collection('losses', cross_entropy_mean)\n",
+    "\n",
+    "    # The total loss is defined as the cross entropy loss plus all of the weight\n",
+    "    # decay terms (L2 loss).\n",
+    "    return tf.add_n(tf.get_collection('losses'), name='total_loss')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def train(total_loss, global_step):\n",
+    "  \"\"\"Train CIFAR-10 model.\n",
+    "  Create an optimizer and apply to all trainable variables. Add moving\n",
+    "  average for all trainable variables.\n",
+    "  Args:\n",
+    "    total_loss: Total loss from loss().\n",
+    "    global_step: Integer Variable counting the number of training steps\n",
+    "      processed.\n",
+    "  Returns:\n",
+    "    train_op: op for training.\n",
+    "  \"\"\"\n",
+    "  # Variables that affect learning rate.\n",
+    "  num_batches_per_epoch = NUM_EXAMPLES_PER_EPOCH_FOR_TRAIN / FLAGS.batch_size\n",
+    "  decay_steps = int(num_batches_per_epoch * NUM_EPOCHS_PER_DECAY)\n",
+    "\n",
+    "  # Decay the learning rate exponentially based on the number of steps.\n",
+    "  lr = tf.train.exponential_decay(INITIAL_LEARNING_RATE,\n",
+    "                                  global_step,\n",
+    "                                  decay_steps,\n",
+    "                                  LEARNING_RATE_DECAY_FACTOR,\n",
+    "                                  staircase=True)\n",
+    "  tf.summary.scalar('learning_rate', lr)\n",
+    "\n",
+    "  # Generate moving averages of all losses and associated summaries.\n",
+    "  loss_averages_op = _add_loss_summaries(total_loss)\n",
+    "\n",
+    "  # Compute gradients.\n",
+    "  with tf.control_dependencies([loss_averages_op]):\n",
+    "    opt = tf.train.GradientDescentOptimizer(lr)\n",
+    "    grads = opt.compute_gradients(total_loss)\n",
+    "\n",
+    "  # Apply gradients.\n",
+    "  apply_gradient_op = opt.apply_gradients(grads, global_step=global_step)\n",
+    "\n",
+    "  # Add histograms for trainable variables.\n",
+    "  for var in tf.trainable_variables():\n",
+    "    tf.summary.histogram(var.op.name, var)\n",
+    "\n",
+    "  # Add histograms for gradients.\n",
+    "  for grad, var in grads:\n",
+    "    if grad is not None:\n",
+    "      tf.summary.histogram(var.op.name + '/gradients', grad)\n",
+    "\n",
+    "  # Track the moving averages of all trainable variables.\n",
+    "  variable_averages = tf.train.ExponentialMovingAverage(\n",
+    "      MOVING_AVERAGE_DECAY, global_step)\n",
+    "  with tf.control_dependencies([apply_gradient_op]):\n",
+    "    variables_averages_op = variable_averages.apply(tf.trainable_variables())\n",
+    "\n",
+    "  return variables_averages_op"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -76,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
