--- a/src/chess_nn_note.ipynb
+++ b/src/chess_nn_note.ipynb
@@ -10,9 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
     "import numpy as np\n",
@@ -28,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -117,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -143,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -156,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_data shape:  (10360, 227, 227)\n",
+      "train_data shape:  (1000, 227, 227)\n",
       "test_data shape:  (740, 227, 227)\n"
      ]
     }
@@ -172,8 +180,8 @@
     "from data_config import DataConfig\n",
     "\n",
     "data = DataConfig('data.config')\n",
-    "train_data, train_labels = data.get_train()\n",
-    "test_data, test_labels = data.get_test()\n",
+    "train_data, train_labels = data.get_train(1000)\n",
+    "test_data, test_labels = data.get_test(1000)\n",
     "test_labels = test_labels[:, 0].astype(int).reshape(-1,1)\n",
     "train_labels = train_labels[:, 0].astype(int).reshape(-1,1)\n",
     "print('train_data shape: ', train_data.shape)\n",
@@ -182,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -238,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -263,13 +271,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "def conta_label(Y,label):\n",
+    "    count= 0\n",
     "    for i in range(len(Y)):\n",
-    "        count=0\n",
     "        if Y[i] == label:\n",
     "            count+=1\n",
     "    return count\n",
@@ -278,11 +286,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "532"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conta_label(Y,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conta_label(Y,3)"
+    "def conta_todos_labels(Y):\n",
+    "    labels = []\n",
+    "    for j in range(len(LABELS)):\n",
+    "        labels =labels + [conta_label(Y,j)]\n",
+    "    return labels\n",
+    "        \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = conta_todos_labels(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = []\n",
+    "for j in range(len(LABELS)):\n",
+    "    labels = labels + [1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 532,  279,  502, 1471,  369,  271, 3461,  517,  279,  512, 1484,\n",
+       "        371,  312])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_count = np.array(label_count) # numero de amostras de cada label\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l_c_inteiro = np.round(label_count*0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def amostragem_aleatoria(X,Y):\n",
+    "    x=[]\n",
+    "    y=[]\n",
+    "    prop = len(X)/10360\n",
+    "    l_c_prop = np.round(label_count*prop)\n",
+    "    for i in range(len(LABELS)):\n",
+    "        n = []\n",
+    "        j = 0\n",
+    "        while n != (l_c_prop[i]):\n",
+    "            if Y[j] == i:\n",
+    "                n += [X[j]]\n",
+    "                j += 1\n",
+    "                y += np.array[i]\n",
+    "            else:\n",
+    "                j += 1\n",
+    "        x+=n\n",
+    "    x = np.array(x)\n",
+    "    y = np.array(y)\n",
+    "    return randomsampling(x,y)\n",
+    "    \n",
+    "        \n",
+    "                \n",
+    "            \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=[]\n",
+    "y = []\n",
+    "prop = len(X)/10360\n",
+    "l_c_prop = np.round(label_count*prop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 1000 is out of bounds for axis 0 with size 1000",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-102-efcc9b01335f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ml_c_prop\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m             \u001b[0mn\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m             \u001b[0mj\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 1000 is out of bounds for axis 0 with size 1000"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(LABELS)):\n",
+    "    n = []\n",
+    "    j = 0\n",
+    "    while len(n) != (l_c_prop[i]):\n",
+    "        if Y[j] == i:\n",
+    "            n += [X[j]]\n",
+    "            j += 1\n",
+    "            y += [i]\n",
+    "        else:\n",
+    "            j += 1\n",
+    "    x+=n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n"
    ]
   },
   {
@@ -300,18 +509,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
   }
  },
  "nbformat": 4,
