Amostragem aleatória pronta

--- a/src/chess_nn_note.ipynb
+++ b/src/chess_nn_note.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -65,8 +65,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Funções para amostragem aleatória:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def randomsampling(X,Y):\n",
+    "    size = X.shape[0]\n",
+    "    idx = np.random.choice(np.arange(X.shape[0]), X.shape[0], replace=False)\n",
+    "    x_sample = X[idx]\n",
+    "    y_sample = Y[idx]\n",
+    "    return x_sample, y_sample\n",
+    "\n",
+    "def conta_label(Y,label):\n",
+    "    count= 0\n",
+    "    for i in range(len(Y)):\n",
+    "        if Y[i] == label:\n",
+    "            count+=1\n",
+    "    return count\n",
+    "\n",
+    "def conta_todos_labels(Y):\n",
+    "    labels = []\n",
+    "    for j in range(len(LABELS)):\n",
+    "        labels =labels + [conta_label(Y,j)]\n",
+    "    return labels\n",
+    "\n",
+    "#label_count = np.array(conta_todos_labels(Y)) # numero de amostras de cada label\n",
+    "\n",
+    "def amostragem_aleatoria(X,Y,k):\n",
+    "    x=[]\n",
+    "    y=[]\n",
+    "    prop = k/10360\n",
+    "    l_c_prop = np.round(label_count*prop)\n",
+    "    for i in range(len(LABELS)):\n",
+    "        n = []\n",
+    "        j = 0\n",
+    "        while len(n) != (l_c_prop[i]):\n",
+    "            if Y[j] == i:\n",
+    "                n += [X[j]]\n",
+    "                j += 1\n",
+    "                y += [i]\n",
+    "            else:\n",
+    "                j += 1\n",
+    "        x+=n\n",
+    "    x = np.array(x)\n",
+    "    y = np.array(y)\n",
+    "    x, y = randomsampling(x,y)\n",
+    "    return x,y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -82,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -108,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -125,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -151,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -164,15 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_data shape:  (1000, 227, 227)\n",
-      "test_data shape:  (740, 227, 227)\n"
+      "train_data shape:  (10360, 227, 227)\n",
+      "test_data shape:  (740, 227, 227)\n",
+      "numero de amostras de cada label:  [ 532  279  502 1471  369  271 3461  517  279  512 1484  371  312]\n"
      ]
     }
    ],
@@ -180,17 +238,19 @@
     "from data_config import DataConfig\n",
     "\n",
     "data = DataConfig('data.config')\n",
-    "train_data, train_labels = data.get_train(1000)\n",
-    "test_data, test_labels = data.get_test(1000)\n",
+    "train_data, train_labels = data.get_train()\n",
+    "test_data, test_labels = data.get_test()\n",
     "test_labels = test_labels[:, 0].astype(int).reshape(-1,1)\n",
     "train_labels = train_labels[:, 0].astype(int).reshape(-1,1)\n",
+    "label_count = np.array(conta_todos_labels(train_labels)) # numero de amostras de cada label\n",
     "print('train_data shape: ', train_data.shape)\n",
-    "print('test_data shape: ', test_data.shape)"
+    "print('test_data shape: ', test_data.shape)\n",
+    "print('numero de amostras de cada label: ', label_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,268 +290,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def randomsampling(X,Y):\n",
-    "    size = X.shape[0]\n",
-    "    idx = np.random.choice(np.arange(X.shape[0]), X.shape[0], replace=False)\n",
-    "    x_sample = X[idx]\n",
-    "    y_sample = Y[idx]\n",
-    "    return x_sample, y_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = train_data\n",
-    "Y = train_labels\n",
-    "size = train_data.shape[0]\n",
-    "idx = np.random.choice(np.arange(size), size, replace=False)\n",
-    "x_sample = X[idx]\n",
-    "y_sample = Y[idx]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "X,Y = randomsampling(train_data,train_labels)"
+    "X,Y = amostragem_aleatoria(train_data,train_labels,1000) # X,Y e numero de amostras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def conta_label(Y,label):\n",
-    "    count= 0\n",
-    "    for i in range(len(Y)):\n",
-    "        if Y[i] == label:\n",
-    "            count+=1\n",
-    "    return count\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "532"
+       "array([10,  6, 10, 10,  6,  3,  7, 10,  6,  9, 10, 10,  3,  5, 11,  5,  6,\n",
+       "        5,  7, 10, 10,  2,  1, 10,  7,  6,  6,  6,  1,  9,  0,  7,  6, 12,\n",
+       "        6, 10,  6,  6,  3,  0,  8,  6,  2,  6,  3,  3,  0,  9,  6,  6,  6,\n",
+       "        6,  6,  4,  7, 10, 10,  6,  3,  3,  3,  3,  9,  6, 12, 10, 10, 11,\n",
+       "        3,  6, 10,  6,  1,  6,  6,  6,  6,  9,  6,  6, 11,  9,  0,  3, 12,\n",
+       "        8,  3,  6,  9,  3,  4,  0,  6,  6,  9,  6,  1,  6,  6,  6])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conta_label(Y,0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def conta_todos_labels(Y):\n",
-    "    labels = []\n",
-    "    for j in range(len(LABELS)):\n",
-    "        labels =labels + [conta_label(Y,j)]\n",
-    "    return labels\n",
-    "        \n",
-    "        \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = conta_todos_labels(Y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = []\n",
-    "for j in range(len(LABELS)):\n",
-    "    labels = labels + [1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 532,  279,  502, 1471,  369,  271, 3461,  517,  279,  512, 1484,\n",
-       "        371,  312])"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "label_count\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label_count = np.array(label_count) # numero de amostras de cada label\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1000"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l_c_inteiro = np.round(label_count*0.3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def amostragem_aleatoria(X,Y):\n",
-    "    x=[]\n",
-    "    y=[]\n",
-    "    prop = len(X)/10360\n",
-    "    l_c_prop = np.round(label_count*prop)\n",
-    "    for i in range(len(LABELS)):\n",
-    "        n = []\n",
-    "        j = 0\n",
-    "        while n != (l_c_prop[i]):\n",
-    "            if Y[j] == i:\n",
-    "                n += [X[j]]\n",
-    "                j += 1\n",
-    "                y += np.array[i]\n",
-    "            else:\n",
-    "                j += 1\n",
-    "        x+=n\n",
-    "    x = np.array(x)\n",
-    "    y = np.array(y)\n",
-    "    return randomsampling(x,y)\n",
-    "    \n",
-    "        \n",
-    "                \n",
-    "            \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x=[]\n",
-    "y = []\n",
-    "prop = len(X)/10360\n",
-    "l_c_prop = np.round(label_count*prop)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "index 1000 is out of bounds for axis 0 with size 1000",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-102-efcc9b01335f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ml_c_prop\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m             \u001b[0mn\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m             \u001b[0mj\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 1000 is out of bounds for axis 0 with size 1000"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(LABELS)):\n",
-    "    n = []\n",
-    "    j = 0\n",
-    "    while len(n) != (l_c_prop[i]):\n",
-    "        if Y[j] == i:\n",
-    "            n += [X[j]]\n",
-    "            j += 1\n",
-    "            y += [i]\n",
-    "        else:\n",
-    "            j += 1\n",
-    "    x+=n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n"
+    "Y[:100]"
    ]
   },
   {
@@ -509,6 +339,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
