--- a/src/ML-Chess.ipynb
+++ b/src/ML-Chess.ipynb
@@ -5,69 +5,52 @@
    "metadata": {},
    "source": [
     "Unversidade Federal de Santa Catarina  \n",
-    "Departamento de Engenharia Eletrica  \n",
-    "EEL7514/EEL7513 - Introducao ao Aprendizado de Maquina\n",
+    "Departamento de Engenharia Elétrica  \n",
+    "EEL7514/EEL7513 - Introdução ao Aprendizado de Máquina\n",
     "\n",
-    "# Reconhecimento de Pecas de Xadrez\n",
+    "# Rede Convolucional para Reconhecimento de Peças de Xadrez\n",
     "\n",
     "**Alunos**\n",
     "> Anderson R. Livramento  \n",
-    "> Joao Vitor Laitano\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
+    "> João Vitor Laitano\n",
     "\n",
-    "from data_config import DataConfig\n"
+    "# Introdução\n",
+    "\n",
+    "????\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "NUM_CLASSES = 13"
+    "# Arquitetura\n",
+    "\n",
+    "O projeto foi fortemente baseado [neste tutorial](http://adventuresinmachinelearning.com/keras-tutorial-cnn-11-lines/) sobre **Redes Convolucionais** utilizando o [Keras](https://keras.io/), e, portanto, inicialmente a arquitetura utilizada foi a mesma sugerida no post:\n",
+    "\n",
+    "![CNN](images/CNN-example-block-diagram.jpg)\n",
+    "\n",
+    "Com algumas pequenas modificações. No nosso modelo a entrada é **227x227** e o tamanho dos filtros nas camadas convolucionais foi alterado para **7x7**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'1.8.0'"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
     }
    ],
    "source": [
-    "tf.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = DataConfig('data.config')"
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import chess_nn as cnn\n",
+    "\n",
+    "from data_config import DataConfig\n"
    ]
   },
   {
@@ -79,17 +62,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data, train_labels = data.get_train(3)\n",
-    "test_data, test_labels = data.get_test(3)"
+    "data = DataConfig('data.config')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data, train_labels = data.get_train()\n",
+    "test_data, test_labels = data.get_test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,39 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0],\n",
-       "       [0],\n",
-       "       [0]])"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 227, 227)\n",
-      "(3, 2)\n",
-      "(3, 227, 227)\n",
-      "(3, 2)\n"
+      "(10360, 227, 227)\n",
+      "(10360, 1)\n",
+      "(740, 227, 227)\n",
+      "(740, 1)\n"
      ]
     }
    ],
@@ -144,183 +114,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(500, 227, 227)\n",
+      "(500,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_train, y_train = cnn.random_sampling(train_data, train_labels, 500)\n",
+    "print(x_train.shape)\n",
+    "print(y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(500, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_train = y_train.reshape(-1, 1)\n",
+    "print(y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Montando a arquitetura da rede:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def inference(images):\n",
-    "  \"\"\"Build the CIFAR-10 model.\n",
-    "  Args:\n",
-    "    images: Images returned from distorted_inputs() or inputs().\n",
-    "  Returns:\n",
-    "    Logits.\n",
-    "  \"\"\"\n",
-    "  # We instantiate all variables using tf.get_variable() instead of\n",
-    "  # tf.Variable() in order to share variables across multiple GPU training runs.\n",
-    "  # If we only ran this model on a single GPU, we could simplify this function\n",
-    "  # by replacing all instances of tf.get_variable() with tf.Variable().\n",
-    "  #\n",
-    "  # conv1\n",
-    "  with tf.variable_scope('conv1') as scope:\n",
-    "    kernel = tf.get_variable('weights',\n",
-    "                            shape=[5, 5, 3, 64],\n",
-    "                            initializer=tf.truncated(stddev=5e-2,dtype=tf.float32),\n",
-    "                            dtype=tf.float32)\n",
-    "    conv = tf.nn.conv2d(images, kernel, [1, 1, 1, 1], padding='SAME')\n",
-    "    biases = tf.get_variable('biases', [64], tf.constant_initializer(0.0))\n",
-    "    pre_activation = tf.nn.bias_add(conv, biases)\n",
-    "    conv1 = tf.nn.relu(pre_activation, name=scope.name)\n",
-    "\n",
-    "  # pool1\n",
-    "  pool1 = tf.nn.max_pool(conv1, ksize=[1, 3, 3, 1], strides=[1, 2, 2, 1],\n",
-    "                         padding='SAME', name='pool1')\n",
-    "  # norm1\n",
-    "  norm1 = tf.nn.lrn(pool1, 4, bias=1.0, alpha=0.001 / 9.0, beta=0.75,\n",
-    "                    name='norm1')\n",
-    "\n",
-    "  # conv2\n",
-    "  with tf.variable_scope('conv2') as scope:\n",
-    "    kernel = tf.get_variable('weights',\n",
-    "                            shape=[5, 5, 64, 64],\n",
-    "                            initializer=tf.truncated(stddev=5e-2,dtype=tf.float32),\n",
-    "                            dtype=tf.float32)\n",
-    "    conv = tf.nn.conv2d(norm1, kernel, [1, 1, 1, 1], padding='SAME')\n",
-    "    biases = tf.get_variable('biases', [64], tf.constant_initializer(0.1),dtype=tf.float32)\n",
-    "    pre_activation = tf.nn.bias_add(conv, biases)\n",
-    "    conv2 = tf.nn.relu(pre_activation, name=scope.name)\n",
-    "\n",
-    "  # norm2\n",
-    "  norm2 = tf.nn.lrn(conv2, 4, bias=1.0, alpha=0.001 / 9.0, beta=0.75,\n",
-    "                    name='norm2')\n",
-    "  # pool2\n",
-    "  pool2 = tf.nn.max_pool(norm2, ksize=[1, 3, 3, 1],\n",
-    "                         strides=[1, 2, 2, 1], padding='SAME', name='pool2')\n",
-    "\n",
-    "  # local3\n",
-    "  with tf.variable_scope('local3') as scope:\n",
-    "    # Move everything into depth so we can perform a single matrix multiply.\n",
-    "    reshape = tf.reshape(pool2, [images.get_shape().as_list()[0], -1])\n",
-    "    dim = reshape.get_shape()[1].value\n",
-    "    weights = tf.get_variable('weights', shape=[dim, 384],\n",
-    "                                          initializer=tf.truncated(stddev=5e-2,dtype=tf.float32), dtype=tf.float32)\n",
-    "    biases = tf.get_variable('biases', [384], tf.constant_initializer(0.1))\n",
-    "    local3 = tf.nn.relu(tf.matmul(reshape, weights) + biases, name=scope.name)\n",
-    "\n",
-    "  # local4\n",
-    "  with tf.variable_scope('local4') as scope:\n",
-    "    weights = tf.get_variable('weights', shape=[384, 192],\n",
-    "                                          initializer=tf.truncated(stddev=5e-2,dtype=tf.float32),dtype=tf.float32)\n",
-    "    biases = tf.get_variable('biases', [192], tf.constant_initializer(0.1))\n",
-    "    local4 = tf.nn.relu(tf.matmul(local3, weights) + biases, name=scope.name)\n",
-    "\n",
-    "\n",
-    "  # linear layer(WX + b),\n",
-    "  # We don't apply softmax here because\n",
-    "  # tf.nn.sparse_softmax_cross_entropy_with_logits accepts the unscaled logits\n",
-    "  # and performs the softmax internally for efficiency.\n",
-    "    with tf.variable_scope('softmax_linear') as scope:\n",
-    "    weights = tf.get_variable('weights', [192, NUM_CLASSES],\n",
-    "                                          initializer=tf.truncated(stddev=1/192,dtype=tf.float32), dtype=tf.float32)\n",
-    "    biases = tf.get_variable('biases', [NUM_CLASSES],\n",
-    "                              tf.constant_initializer(0.0))\n",
-    "    softmax_linear = tf.add(tf.matmul(local4, weights), biases, name=scope.name)\n",
-    "\n",
-    "\n",
-    "    return softmax_linear\n",
-    "\n",
-    "\n",
-    "def loss(logits, labels):\n",
-    "    \"\"\"Add L2Loss to all the trainable variables.\n",
-    "    Add summary for \"Loss\" and \"Loss/avg\".\n",
-    "    Args:\n",
-    "    logits: Logits from inference().\n",
-    "    labels: Labels from distorted_inputs or inputs(). 1-D tensor\n",
-    "            of shape [batch_size]\n",
-    "    Returns:\n",
-    "    Loss tensor of type float.\n",
-    "    \"\"\"\n",
-    "    # Calculate the average cross entropy loss across the batch.\n",
-    "    labels = tf.cast(labels, tf.int64)\n",
-    "    cross_entropy = tf.nn.sparse_softmax_cross_entropy_with_logits(\n",
-    "    labels=labels, logits=logits, name='cross_entropy_per_example')\n",
-    "    cross_entropy_mean = tf.reduce_mean(cross_entropy, name='cross_entropy')\n",
-    "    tf.add_to_collection('losses', cross_entropy_mean)\n",
-    "\n",
-    "    # The total loss is defined as the cross entropy loss plus all of the weight\n",
-    "    # decay terms (L2 loss).\n",
-    "    return tf.add_n(tf.get_collection('losses'), name='total_loss')\n"
+    "cnn_model = cnn.make_model()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Treinando a rede (isso vai levar algum tempo):"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def train(total_loss, global_step):\n",
-    "  \"\"\"Train CIFAR-10 model.\n",
-    "  Create an optimizer and apply to all trainable variables. Add moving\n",
-    "  average for all trainable variables.\n",
-    "  Args:\n",
-    "    total_loss: Total loss from loss().\n",
-    "    global_step: Integer Variable counting the number of training steps\n",
-    "      processed.\n",
-    "  Returns:\n",
-    "    train_op: op for training.\n",
-    "  \"\"\"\n",
-    "  # Variables that affect learning rate.\n",
-    "  num_batches_per_epoch = NUM_EXAMPLES_PER_EPOCH_FOR_TRAIN / FLAGS.batch_size\n",
-    "  decay_steps = int(num_batches_per_epoch * NUM_EPOCHS_PER_DECAY)\n",
+    "history = cnn.train(cnn_model, x_train, y_train, test_data, test_labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### É necessário muito recurso computacional\n",
     "\n",
-    "  # Decay the learning rate exponentially based on the number of steps.\n",
-    "  lr = tf.train.exponential_decay(INITIAL_LEARNING_RATE,\n",
-    "                                  global_step,\n",
-    "                                  decay_steps,\n",
-    "                                  LEARNING_RATE_DECAY_FACTOR,\n",
-    "                                  staircase=True)\n",
-    "  tf.summary.scalar('learning_rate', lr)\n",
+    "Saída do treinamento, usando **500** amostras, rodando em um PC AMD Ryzen 7, 8GB RAM:\n",
     "\n",
-    "  # Generate moving averages of all losses and associated summaries.\n",
-    "  loss_averages_op = _add_loss_summaries(total_loss)\n",
+    "![500 samples](images/500_samples_stdout.png)\n",
     "\n",
-    "  # Compute gradients.\n",
-    "  with tf.control_dependencies([loss_averages_op]):\n",
-    "    opt = tf.train.GradientDescentOptimizer(lr)\n",
-    "    grads = opt.compute_gradients(total_loss)\n",
-    "\n",
-    "  # Apply gradients.\n",
-    "  apply_gradient_op = opt.apply_gradients(grads, global_step=global_step)\n",
-    "\n",
-    "  # Add histograms for trainable variables.\n",
-    "  for var in tf.trainable_variables():\n",
-    "    tf.summary.histogram(var.op.name, var)\n",
-    "\n",
-    "  # Add histograms for gradients.\n",
-    "  for grad, var in grads:\n",
-    "    if grad is not None:\n",
-    "      tf.summary.histogram(var.op.name + '/gradients', grad)\n",
-    "\n",
-    "  # Track the moving averages of all trainable variables.\n",
-    "  variable_averages = tf.train.ExponentialMovingAverage(\n",
-    "      MOVING_AVERAGE_DECAY, global_step)\n",
-    "  with tf.control_dependencies([apply_gradient_op]):\n",
-    "    variables_averages_op = variable_averages.apply(tf.trainable_variables())\n",
-    "\n",
-    "  return variables_averages_op"
+    "Tempo total: **1 hora**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testando:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "score = cnn.score(cnn.model, test_data, test_labels)\n",
+    "print('Test loss:', score[0])\n",
+    "print('Test accuracy:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Histórico do treinamento:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(range(1, 11), history.acc)\n",
+    "plt.xlabel('Épocas')\n",
+    "plt.ylabel('Acurácia')"
+   ]
   }
  ],
  "metadata": {
@@ -339,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
