Dataset alterado. Mudando para o Colab.
Os labels agora é uma matriz (n, 1).

--- a/src/ML-Chess.ipynb
+++ b/src/ML-Chess.ipynb
@@ -47,10 +47,18 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "import numpy as np\n",
-    "import chess_nn as cnn\n",
+    "import io\n",
     "\n",
-    "from data_config import DataConfig\n"
+    "import h5py\n",
+    "\n",
+    "from google.colab import auth\n",
+    "from googleapiclient.discovery import build\n",
+    "from googleapiclient.http import MediaIoBaseDownload\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "chess_dataset_h5 = 'file-id'"
    ]
   },
   {
@@ -66,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = DataConfig('data.config')"
+    "auth.authenticate_user()"
    ]
   },
   {
@@ -75,8 +83,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data, train_labels = data.get_train()\n",
-    "test_data, test_labels = data.get_test()"
+    "print('Fazendo o download do conjunto de dados do Google Drive')\n",
+    "drive_service = build('drive', 'v3')\n",
+    "request = drive_service.files().get_media(fileId=chess_dataset_h5)\n",
+    "h5data = io.BytesIO()\n",
+    "downloader = MediaIoBaseDownload(h5data, request)\n",
+    "done = False\n",
+    "while done is False:\n",
+    "  _, done = downloader.next_chunk()\n",
+    "h5data.seek(0)\n",
+    "with open('/tmp/h5data.hdf5', 'wb') as f:\n",
+    "    f.write(h5data.read())\n",
+    "print('Pronto.')"
    ]
   },
   {
@@ -85,8 +103,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_labels = test_labels[:, 0].astype(int).reshape(-1,1)\n",
-    "train_labels = train_labels[:, 0].astype(int).reshape(-1,1)"
+    "h5_file = h5py.File('/tmp/h5data.hdf5', 'r')\n",
+    "train_data = h5_file['chess_imgs_train'][:]\n",
+    "train_labels = h5_file['chess_labels_train'][:]\n",
+    "test_data = h5_file['chess_imgs_test'][:]\n",
+    "test_labels = h5_file['chess_labels_test'][:]"
    ]
   },
   {
@@ -113,57 +134,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(500, 227, 227)\n",
-      "(500,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "x_train, y_train = cnn.random_sampling(train_data, train_labels, 500)\n",
-    "print(x_train.shape)\n",
-    "print(y_train.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(500, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "y_train = y_train.reshape(-1, 1)\n",
-    "print(y_train.shape)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Montando a arquitetura da rede:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cnn_model = cnn.make_model()"
    ]
   },
   {
@@ -180,19 +154,6 @@
    "outputs": [],
    "source": [
     "history = cnn.train(cnn_model, x_train, y_train, test_data, test_labels)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### É necessário muito recurso computacional\n",
-    "\n",
-    "Saída do treinamento, usando **500** amostras, rodando em um PC AMD Ryzen 7, 8GB RAM:\n",
-    "\n",
-    "![500 samples](images/500_samples_stdout.png)\n",
-    "\n",
-    "Tempo total: **1 hora**."
    ]
   },
   {
@@ -248,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
